--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
                     - Deployted SQL db<br />
                     - Began work on python data interaction layer<br />
 		    - Added popularity data as icon heatmap<br />
+                    - Added bikes out per day of the year<br />
+                    <h3>Week 3</h3>
+                    - Built front and backend for daily playback<br />
+                    - Updated UI, Icons, and layout<br />
+                    - Made markers dynamically removable
                   <h2><a href="mailto:bspahr314@gmail.com">Bryan Spahr</a></h2>
                   <h3>Week 1</h3>
                     - Began data analysis<br />
