changed bar color to red and hopefully fixed path error

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       left: 10px;
     }
     .chartOverview rect {
-      fill: #ef6548;
+      fill: #EE513F;
     }
     .chartOverview text {
       fill: black;
@@ -136,7 +136,7 @@
                     - Added rider breakdown demographics graphs<br />
                     - Deployted SQL db<br />
                     - Began work on python data interaction layer<br />
-		    - Added popularity data as icon heatmap<br />
+					- Added popularity data as icon heatmap<br />
                     - Added bikes out per day of the year<br />
                     <h3>Week 3</h3>
                     - Built front and backend for daily playback<br />
@@ -145,8 +145,8 @@
                   <h2><a href="mailto:bspahr314@gmail.com">Bryan Spahr</a></h2>
                   <h3>Week 1</h3>
                     - Began data analysis<br />
-		    - Built test sqllite db for divvy data
-		   <h3>Week 2</h3>
+					- Built test sqllite db for divvy data
+				  <h3>Week 2</h3>
                     - Started work on SVG overview graphs
                   <h2><a href="mailto:ddesut2@uic.edu">Dane DeSutter</a><br /></h2>
                   <h3>Week 1</h3>
