--- a/index.html
+++ b/index.html
@@ -264,6 +264,9 @@
 	  attribution: 'Tiles Courtesy of <a href="http://www.mapquest.com/">MapQuest</a> &mdash; Portions Courtesy NASA/JPL-Caltech and U.S. Depart. of Agriculture, Farm Service Agency',
 	  subdomains: '1234'
        });
+       var chicagoBorder = L.tileLayer(
+         "http://media.apps.chicagotribune.com/maptiles/chicago-mask/{z}/{x}/{y}.png",
+       { maxZoom: 16, minZoom: 8, opacity: 0.5 });
  
        var map = L.map('map', { //).setView([41.85, -87.65], 13);
           center: [41.90, -87.60],
@@ -274,7 +277,9 @@
          "OpenStreetMaps": osm, 
          "Satellite": sat
        }
- 
+       var overlayMaps = {
+         "Chicago Border": chicagoBorder
+       }
         mapLink = 
             '<a href="http://openstreetmap.org">OpenStreetMap</a>';
 
@@ -307,6 +312,22 @@
       })
       return false;
     }
+    var neighborhoods = new L.FeatureGroup();
+    json = d3.json('static-json/boundaries.json')
+      .get(function(error, data) {
+        d = data.slice();
+        for (i = 0; i < d.length; i++) {
+          var neighborhood = L.geoJson(d[i].geometry, {
+          "style": {
+            'color': '#222',
+            'opacity': .5,
+            'weight': 1,
+            'fillColor': 'aeaeae',
+            'fillOpacity': 0.1
+          }});
+          neighborhoods.addLayer(neighborhood);
+        }
+      });    
     function removeAllMarkers(){
       window.removed = true;
       map.removeLayer(markers);
@@ -317,8 +338,9 @@
       }
     }
     map.addLayer(markers);
+    map.addLayer(neighborhoods);
     populate();
-    var layercontrol = L.control.layers(baseMaps, null, {position: 'bottomleft'}).addTo(map);
+    var layercontrol = L.control.layers(baseMaps, overlayMaps, {position: 'bottomleft'}).addTo(map);
     var url = 'csv/gender_all.csv'
     ourCsv = d3.text(url)
       .get(function(error, data) {
