additional library listings and work activity

--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
                         <h3>Week 3</h3>
                         - Built front and backend for daily playback<br />
                         - Updated UI, Icons, and layout<br />
-                        - Made markers dynamically removable
+                        - Made markers dynamically removable<br />
+                        - added chicago neighborhood and border overlays
                         <h2><a href="mailto:bspahr314@gmail.com">Bryan Spahr</a></h2>
                         <h3>Week 1</h3>
                         - Began data analysis<br />
@@ -257,6 +258,8 @@
                     <h3>leaflet-sidebar</h3>
                     <h3>font awesome icons</h3>
                     <h3>pikaday calendar</h3>
+                    <h3>moment.js</h3>
+                    <h3>chicago tribune border tiles and neighborhood json</h3>
                 </div>
             </div>
         </div>
