--- a/index.html
+++ b/index.html
@@ -1,143 +1,88 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <style>
-            html, body, #map {
-                width: 100%;
-                height: 100%;
-                font: 10pt "Helvetica Neue", Arial, Helvetica, sans-serif;
-            }
+  <head>
+    <title>CS424 - P2 - Divvy Map</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" 
+      content="width=device-width, 
+               initial-scale=1.0, 
+               maximum-scale=1.0, 
+               user-scalable=no">
 
-            body  {
-                margin:0;
-                padding:0;
-            }
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/leaflet.css" />
+    <link rel="stylesheet" href="css/leaflet-sidebar.css" />
+    <link rel="stylesheet" href="css/pikaday.css" />
+    <link rel="stylesheet" href="css/leaflet-routing-machine.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/p2.css" />
 
-            a {
-                text-decoration: none;
-                color: darkblue;
-            }
-            text {
-                z-index: 3000;
-            }
-            #graphs {
-                left: 10px;
-            }
-            .chartOverview rect {
-                fill: #EE513F;
-            }
-            .chartOverview text {
-                fill: black;
-                font: 10px sans-serif;
-                text-anchor: end;
-            }
-            .chartLabel {
-                fill: black;
-                font: 12px sans-serif;
-                text-anchor: end;
-                text-indent: 54px;
-            }
-            .yaxis path,line {
-                fill: none; 
-                stroke: black; 
-                stroke-width; 1; 
-            }
-            .xaxis path,line {
-                fill: none;
-                stroke: black;
-                stroke-width; 1;
-            }
-            #dashes { 
-                position: absolute;
-                left: 70px; 
-                top: 116px;
-                z-index: 3000;
-            }
-            ul#day {
-                list-style: none;
-            }
-            #day li {
-                width: 500px;
-                padding-top: 7px;
-                padding-bottom: 7px;
-                padding-left: 35px;
-                border-bottom: 1px solid #aeaeae;
-            }
-            #day li.selected {
-                background-color: lightblue;
-            }
-            #sunrise {
-                position: absolute;
-                top: 305.375px;
-                left: 5px;
-                color: #666;
-                font-size: -1;
-            }
-            #sunset {
-                position: absolute;
-                top: 714.425px;
-                left: 5px;
-                color: #666;
-                font-size: -1;
-            }
-            .tripdata {
-                display: inline;
-            }
-            .leaflet-routing-container {
-                display: none;
-            }
+    <script src="js/d3.v3.min.js"></script>
+    <script src="js/leaflet.js"></script>
+    <script src="js/pie.js"></script>
+    <script src="js/yearDayBar.js"></script>
+    <script src="js/stationPop.js"></script>
+    <script src="js/icons.js"></script>
+    <script src="js/moment.js"></script>
+    <script src="js/pikaday.js"></script>
+    <script src="js/sunrise.js"></script>
+    <script src="js/sunset.js"></script>
+    <script src="js/chartDayOfWeek.js"></script>
+    <script src="js/chartHourOfDay.js"></script>
+    <script src="js/chartDistancesOverall.js"></script>
+    <script src="js/chartTimesOverall.js"></script>
+    <script src="js/playback.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.bootstrap.wizard.js"></script>
+    <script src="js/leaflet-routing-machine.js"></script>
+  </head>
+  <body>
+    <div id="map">
+    </div>
 
+    <div id="sidebar-right" class="sidebar collapsed">
+      <!-- Nav tabs -->
+      <ul class="sidebar-tabs" role="tablist">
+        <li><a href="#home" role="tab" onclick="repopulate()">
+          <i class="fa fa-bar-chart"></i></a></li>
+        <li><a href="#messages" role="tab" onclick="removeAllMarkers()">
+          <i class="fa fa-play"></i></a></li>
+        <li><a href="#profile" role="tab" onclick="repopulate()">
+          <i class="fa fa-users"></i></a></li>
+        <li><a href="#settings" role="tab" onclick="repopulate()">
+          <i class="fa fa-plug"></i></a></li>
+      </ul>
 
-        </style>
-        <title>CS424 - P2 - Divvy Map</title>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/leaflet.css" />
-
-        <link rel="stylesheet" href="css/leaflet-sidebar.css" />
-        <link rel="stylesheet" href="css/pikaday.css" />
-        <script src="js/d3.v3.min.js"></script>
-        <script src="js/leaflet.js"></script>
-        <script src="js/pie.js"></script>
-        <script src="js/yearDayBar.js"></script>
-        <script src="js/stationPop.js"></script>
-        <script src="js/icons.js"></script>
-        <script src="js/moment.js"></script>
-        <script src="js/pikaday.js"></script>
-        <script src="js/sunrise.js"></script>
-        <script src="js/sunset.js"></script>
-        <script src="js/chartDayOfWeek.js"></script>
-        <script src="js/chartHourOfDay.js"></script>
-        <script src="js/chartDistancesOverall.js"></script>
-        <script src="js/chartTimesOverall.js"></script>
-        <script src="js/playback.js"></script>
-        <link rel="stylesheet" href="css/leaflet-routing-machine.css" />
-        <script src="js/leaflet-routing-machine.js"></script>
-    </head>
-    <body>
-        <div id="map">
-        </div>
-
-        <div id="sidebar-right" class="sidebar collapsed">
-            <!-- Nav tabs -->
-            <ul class="sidebar-tabs" role="tablist">
-                <li><a href="#home" role="tab" onclick="repopulate()"><i class="fa fa-bar-chart"></i></a></li>
-                <li><a href="#messages" role="tab" onclick="removeAllMarkers()"><i class="fa fa-play"></i></a></li>
-                <li><a href="#profile" role="tab" onclick="repopulate()"><i class="fa fa-users"></i></a></li>
-                <li><a href="#settings" role="tab" onclick="repopulate()"><i class="fa fa-plug"></i></a></li>
-            </ul>
-
-            <!-- Tab panes -->
-            <div class="sidebar-content">
-                <div class="sidebar-pane" id="home">
-                    <h1>Overview Data</h1>
-                    <div id="graphs">
-                        <div id="gender" style="display: inline"></div>
-                        <div id="type" style="display: inline"></div>
-                        <div id="age" style="display: inline"></div>
-                        <div id="chartDayOfWeek">
+      <!-- Tab panes -->
+      <div class="sidebar-content">
+        <div class="sidebar-pane" id="home">
+          <div id="graphs">
+            <div id="rootwizard" class="tabbable tabs-left">
+              <ul>
+                <li><a href="#gender_tab" data-toggle="tab">Gender</a></li>
+                <li><a href="#subscriber_status_tab" data-toggle="tab">Subscriber Status</a></li>
+                <li><a href="#age_tab" data-toggle="tab">Age</a></li>
+              </ul>
+              <div class="tab-content">
+                <div class="tab-pane" id="gender_tab">
+                  <div id="gender" style="display: inline"></div>
+                </div>
+                <div class="tab-pane" id="subscriber_status_tab">
+                  <div id="type" style="display: inline"></div>
+                </div>
+                <div class="tab-pane" id="age_tab">
+                  <div id="age" style="display: inline"></div>
+                </div>
+                <ul class="pager wizard">
+                  <li class="previous first" style="display:none;"><a href="#">First</a></li>
+                  <li class="previous"><a href="#">Previous</a></li>
+                  <li class="next last" style="display:none;"><a href="#">Last</a></li>
+                  <li class="next"><a href="#">Next</a></li>
+                </ul>
+              </div>	
+            </div>
+                  <div id="chartDayOfWeek">
                             <p class="chartLabel"> Number of bikes out by day of the week</p>
                         </div>
                         <div id="chartHourOfDay">
@@ -153,6 +98,11 @@
 
                     </div>
                 </div>
+                <script>
+    $(document).ready(function() {
+      $('#rootwizard').bootstrapWizard({'tabClass': 'nav nav-tabs'});
+    });
+                </script>
                 <div class="sidebar-pane" id="profile">
                     <div id="contact">
                         <h1>Weekly activity:</h1>
